--- a/_css/common/common-variables.scss
+++ b/_css/common/common-variables.scss
@@ -1,3 +1,5 @@
+$headings: ".post-title, .page-title, .sidebar-title, .sub-header-common__text, h1, h2, h3";
+
 :root {
   /* Layout */
   --main-container-max-width: 1200px;
